Fix SVG icons shrinking issue
SVG icons shrank when viewport gets too narrow. This is because they
are flex items.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     display: grid;
-    grid-template-columns: 256px 1fr var(--main-right-width);
+    grid-template-columns: 300px 1fr var(--main-right-width);
     grid-template-rows: auto 1fr;
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     height: 100vh;
@@ -18,9 +18,8 @@ body {
 
 img, svg {
     display: block;
-    max-width: 100%;
     height: 24px;
-    width: auto;
+    flex-shrink: 0;
 }
 
 input, button {
